--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
         "postcss-loader": "^4.0.4",
         "postcss-preset-env": "^6.7.0",
         "style-loader": "^2.0.0",
+        "stylelint": "^13.7.2",
+        "stylelint-config-standard": "^20.0.0",
         "terser-webpack-plugin": "^5.0.2",
         "vue-jest": "^3.0.7",
         "vue-loader": "^15.9.4",
