--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "postcss-preset-env": "^6.7.0",
         "style-loader": "^2.0.0",
         "stylelint": "^13.7.2",
+        "stylelint-config-airbnb": "0.0.0",
         "stylelint-config-standard": "^20.0.0",
         "terser-webpack-plugin": "^5.0.2",
         "vue-jest": "^3.0.7",
